Fix #38 double row item spacing

--- a/less/flipcard-audio.less
+++ b/less/flipcard-audio.less
@@ -23,7 +23,7 @@
   &__listitem {
     position: relative;
     display: inline-block;
-    margin-top: @item-margin;
+    margin-top: @item-margin * 4;
   }
 
   &__item {
